change db to postgresql

--- a/mindmapGPT-server/appsettings.json
+++ b/mindmapGPT-server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=railway;User Id=localhost;Password=123;TrustServerCertificate=true"
+    "PostgreSQLConnection": "Host=crossover.proxy.rlwy.net;Port=27618;Database=railway;Username=postgres;Password=ezOnGhAqpsVYDVOTgWeqFMORbszErDhF"
   },
   "Jwt": {
     "Key": "supersecretkey1234567890bjskfwlkdbskjfb",
